<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/editbox_dropdown_dark_frame"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startQuizButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/start"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewAttemptsButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/attempts"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/startQuizButton"
        app:layout_constraintStart_toStartOf="@+id/startQuizButton"
        app:layout_constraintTop_toBottomOf="@+id/startQuizButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:elevation="4dp"
        android:fontFamily="casual"
        android:padding="@dimen/textview_padding"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="49sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="282dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/trafficsigns" />

</androidx.constraintlayout.widget.ConstraintLayout>